--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       name="description"
       content="Le portfolio de développeuse web, Yuliia Hots" />
     <meta name="robots" content="index, follow">
-    <link rel="icon" href="./images/icons8-ordinateur-16.png" />
+    <link rel="icon" href="../images/icons/ordinateur-16.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Handlee&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&family=Rubik+Lines&family=Shantell+Sans:ital,wght@0,300..800;1,300..800&family=Vujahday+Script&display=swap" rel="stylesheet">
